--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 @import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato);
 
 body {
-  background-color: #431901;
+  background-color: #f4f4f4;
 }
  
 .pageContainer {
